Revert "bank and bankTags: Remove BankTags dependency on bank"
This reverts commit e8b8d8ac